Fixed #53 Removed white space under the map AND Removed black area in footer when there is no widgets

--- a/inc/woocommerce/css/woocommerce.css
+++ b/inc/woocommerce/css/woocommerce.css
@@ -806,6 +806,9 @@ div.wpcf7-response-output {
 .comments, #comments {
 	width: 100%;
 }
+#map-section {
+	height: auto;
+}
 
 /****
 Footer
